# Comparing_tree_structures

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
debug/tmp/cmake/: bicolorTreeConfig.cmake
debug/tmp/share/pkgconfig/: bicolor-tree.pc
debug/tree/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  test-avl-tree  test-bicolor-tree
debug/tree/Testing/Temporary/: CTestCostData.txt
include/: avl-tree.h  bicolor-tree.h  min-max.h  test.h  tree.h
result/: results_avl.csv  results_bicolor.csv
src/: BicolorTreeConfig.cmake.in  CMakeLists.txt  avl-tree.c  bicolor-tree.c  bicolor-tree.pc.in  min-max.h  plot_results.py  test-avl-tree.c  tree.c
src/avl/: AvlTreeConfig.cmake.in  CMakeLists.txt  avl-tree.c  avl-tree.pc.in
src/bicolor/: BicolorTreeConfig.cmake.in  CMakeLists.txt  bicolor-tree.c  bicolor-tree.pc.in
src/tree/: CMakeLists.txt  avl-tree.h  bicolor-tree.c  bicolor-tree.h  test-bicolor-tree.c
tests/: CMakeLists.txt  test-avl-tree.c  test-bicolor-tree.c  test_utils.c
